--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
 }
@@ -13,7 +14,13 @@ android {
         versionCode 1
         versionName "1.0"
 
+        //There was an error that the schema for RoomDatabase was not provided
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -29,10 +36,57 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //Room implementation
+    def room_version = "2.2.6"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    def lifecycle_version = "1.1.1"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version" //Implementation for ViewModel and LiveData
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version" //use kapt for Kotlin
+
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0' //Implementation for RecycleView
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+//    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
+
+    //Firebase core and messaging
+
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+
+    //Add FCM//
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    //Gson
+    implementation 'com.squareup.retrofit2:converter-gson'
+
+    //Charts
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+
+
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
